--- a/src/task-03.html
+++ b/src/task-03.html
@@ -14,6 +14,7 @@
         line-height: 1.5;
       }
     </style>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.min.css">
     <link rel="stylesheet" href="./css/style.css">
   </head>
   <body>
