--- a/src/task-03.html
+++ b/src/task-03.html
@@ -15,7 +15,7 @@
       }
     </style>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.min.css">
-    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./CSS/style.css">
   </head>
   <body>
     <p><a href="/index.html">На главную</a></p>
