--- a/src/task-03.html
+++ b/src/task-03.html
@@ -18,10 +18,10 @@
     <link rel="stylesheet" href="./CSS/style.css">
   </head>
   <body>
-    <p><a href="/index.html">На главную</a></p>
+    <p><a href="./index.html">На главную</a></p>
 
     <ul id="gallery"></ul>
 
-    <script src="/src/js/task-03.js" type="module"></script>
+    <script src="./src/js/task-03.js" type="module"></script>
   </body>
 </html>
