--- a/src/task-03.html
+++ b/src/task-03.html
@@ -18,7 +18,7 @@
     <link rel="stylesheet" href="./CSS/style.css">
   </head>
   <body>
-    <p><a href="./index.html">На главную</a></p>
+    <p><a href="../index.html">На главную</a></p>
 
     <ul id="gallery"></ul>
 
